# axum-playground

./: Cargo.toml  README.md  users.db
.sqlx/: query-99a3a6d658787e5138f74b226aaf28f5f41538ebcf3b7e3556559d4a8937b919.json
migrations/: 20250126160519_users.sql
src/: error.rs  lib.rs  main.rs
src/api/: mod.rs  route_handlers.rs
src/config/: base.toml  development.toml  models.rs
src/services/: mod.rs
src/services/simple/: mod.rs
src/services/user/: models.rs  repository.rs  service.rs
src/tests/: api.rs  mod.rs
src/tests/common/: mod.rs
tests/: mod.rs
